fix: handle nulls in args